style.css
body {
  font-family: "Gotham", sans-serif;
}

p {
  line-height: 166%;
  margin-bottom: 32px;
  margin-top: 0;
}

a {
  color: #2a9d8f;
  font-weight: 500;
}

.heading {
  margin: 64px 0;
  text-align: center;
}

.heading__copy {
  font-size: 32px;
  font-weight: 500;
}

.wrapper {
  display: flex;
  flex-direction: column-reverse;
  margin: 0 auto;
  max-width: 1024px;
  gap: 32px;
  padding: 0 16px;
}

.copy,
.featured-image {
  width: 100%;
}

.featured-image img {
  width: 100%;
}

@media screen and (min-width: 769px) {
  .heading {
    margin: 64px 0 96px;
  }

  .heading__copy {
    font-size: 36px;
  }

  .wrapper {
    flex-direction: row;
    gap: 64px;
  }

  .copy,
  .featured-image {
    width: 50%;
  }
}

